--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -26,7 +26,7 @@
                 <tr>
                     <th scope="col">@localizer["Place"]</th>
                     @if ((Model.TrendOption ?? TrendOption.None) != TrendOption.None
-                      && (results?.Races?.Max(r => r.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
+                      && (results?.Races?.DefaultIfEmpty().Max(r => r?.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
                           > DateTime.Today.AddMonths(-1)
                       && !((bool?)ViewData["IsExport"] ?? false))
                     {
@@ -146,7 +146,7 @@
                 <tr>
                     <th scope="row">@results.GetScore(comp)?.Rank</th>
                     @if ((Model.TrendOption ?? TrendOption.None) != TrendOption.None
-                    && (results?.Races?.Max(r => r.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
+                    && (results?.Races?.DefaultIfEmpty().Max(r => r?.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
                         > DateTime.Today.AddMonths(-1)
                     && !((bool?)ViewData["IsExport"] ?? false))
                     {
@@ -277,7 +277,7 @@
         <div class="row">
             <div class="col-md-9">
                 @if ((Model.TrendOption ?? TrendOption.None) != TrendOption.None
-                    && (results?.Races?.Max(r => r.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
+                    && (results?.Races?.DefaultIfEmpty().Max(r => r?.Date ?? DateTime.MinValue) ?? DateTime.MinValue)
                     > DateTime.Today.AddMonths(-1)
                     && !((bool?)ViewData["IsExport"] ?? false))
                 {
