Handle races with no results

--- a/SailScores.Web/Views/Shared/_ScoreCell.cshtml
+++ b/SailScores.Web/Views/Shared/_ScoreCell.cshtml
@@ -2,7 +2,7 @@
 
 @model SailScores.Web.Models.SailScores.ScoreCellViewModel
 
-@if (Model != null)
+@if (Model != null && Model.Result != null )
 {
     <td class="text-center
         @(Model.Result.ScoreValue == 1 ? "finish-first ": "")
