--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         <hr class="my-4">
         <span class="d-none d-md-inline">
             <br />
-            <p>SailScores is <a href="https://github.com/SailScores/SailScores">open source</a> and volunteer driven.</p>
+            <p>SailScores is <a href="https://github.com/SailScores/SailScores#sailscores">open source</a> and volunteer driven.</p>
             <p>
                 <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
             </p>
@@ -54,18 +54,14 @@
         <h4>What's important in sailing club scoring software?</h4>
         <ul>
             <li>Fast, simple result entry and sharing using the web.</li>
-            <li>
-                Support for Appendix A Low Point Scoring,
-                <a href="https://www.ussailing.org/competition/rules-officiating/racing-rules/scoring-a-long-series/">
-                    High Point Percentage,
-                </a> or customized club systems.
+            <li>Support for Appendix A Low Point Scoring including 2021-2024 codes,
+                High Point Percentage, and customized club systems and codes.
             </li>
-            <li>Shareable direct links to club, series, and regatta pages.</li>
+            <li>Direct links to club, series, and regatta pages.</li>
             <li>Competitor statistics across multiple series.</li>
             <li>Count a single race in multiple series.</li>
             <li>Automatically collect and share weather information.</li>
             <li>Phone friendly.</li>
         </ul>
     </div>
-
 </div>
