--- a/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
@@ -14,7 +14,7 @@
             @Model.ContactEmail</strong>
             with information about your club setup.</p>
         <p>
-            If you don't receive an email within the next hour please reach out
+            If you don't receive a message within the next hour please reach out
             by email (<a href="mailto:info@sailscores.com">info@sailscores.com</a>
             or <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>) or via
             Twitter (@@SailScores).
@@ -25,7 +25,6 @@
                     Register for an account.
                 </a> </strong> Be sure to use the contact email you
                 provided in the Club Request.
-
         </p>
         <br />
 </div>
