Better fleet short name & prefill season for series
closes SailScores/SailScores#216
closes SailScores/SailScores#215

--- a/SailScores.Web/Views/Fleet/Create.cshtml
+++ b/SailScores.Web/Views/Fleet/Create.cshtml
@@ -22,7 +22,7 @@
                    data-toggle="popover"
                    data-placement="top"
                    data-trigger="focus hover"
-                   data-content="Used to create URLs; avoid spaces. Should be unique for this club, e.g. 2019DieHardMCs">
+                   data-content="Used to create URLs; avoid spaces. Should be unique in the club, e.g. 2019DieHardMCs">
                     <span class="far fa-question-circle"></span>
                 </a>
                 <input asp-for="ShortName" class="form-control" />
