--- a/SailScores.Web/Views/ScoringSystem/Create.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Create.cshtml
@@ -6,11 +6,10 @@
 }
 
 <h2>Create</h2>
-
 <h4>Scoring System</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-lg-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
