--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -21,7 +21,7 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
                 <span class="small">
-                    Consider adding the boat class to the series name if other classes might have similar series, e.g. <em>MC Holiday</em><br />
+                    Add the boats' class to the name if other classes have similar series, e.g. <em>Laser Championship</em><br />
                     Don't include the season in the series name; it will be added automatically.
                 </span>
 
