--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -31,10 +31,9 @@
 }
 
 <div class="container">
-    <h1 class="h2">Series by Seasons</h1>
+    <h1 class="h2">Series by Season</h1>
     @if (Model.CanEdit)
     {
-
         <div class="row bg-almost">
             <div class="col-sm-3 my-2">
                 <a asp-controller="Series"
