--- a/SailScores.Web/Views/BoatClass/Create.cshtml
+++ b/SailScores.Web/Views/BoatClass/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>A type of boat, such as MC Scow or Dragonforce 65</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-lg-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
