--- a/SailScores.Web/Views/BoatClass/Edit.cshtml
+++ b/SailScores.Web/Views/BoatClass/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-lg-4">
         <form asp-action="Edit">
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ClubId" />
